feat: finalize and add README
